#2007-01-12 : Mrecords
#			: - Complete reorganization...
#2007-01-10 : Mrecords
#           : - Defines a class of records that support masked arrays
#2007-01-08 : Core:
#           : - Forced to reset the class defaults after initialization
#           : - Forced the MaskedArray class defaults to be reset
#           : - Modified __array_finallize__ to allow objects w/ _data and _mask fields to be recognized as MA
#2007-01-04 : Core:
#           : - Fixed a but in masked_all_like
#2007-01-02 : Extras
#           : - Made sure that apply_along_axis output the proper fill_value 
#           : Core
#           : - Can use dtypes for the definition of default_fill_value
#2006-12-30 : Core
#			: - Cleaned up setitem/setslice w/ hard_mask=True
#			: - Fixed masked_unary/binary_operations to work with subclasses of MaskedArray
#2006-12-22 : Core
#           : - Optimized(?) default_/maximum_/minimum_fill_value
#           : - Force __new__ to not return a MaskedArray, in order to ...
#           :   ... optimize __array_finalize__
#           : - Add the hard_mask flag to __new__ (*[False]*)
#2006-12-19 : Core
#			: - Fixed a problem on _set_mask which prevented to set a mask to nomask
#           : Extras
#           : - Renamed compress2d to compress_rowcols
#           : - Added dot
#2006-12-18 : Extras
#           : - Added compress2d and mask_rowcols
#2006-12-13 : - moved 'average' to 'extras'
#			: Core
#		    : - Fixed make_mask (forced filling to True)
#	        : - Fixed ndim
#		    : - Fixed error message in __new__ when wrong sizes
#			: - Fixed the reshape function.
#           : Extras
#		    : - masked_all: set default dtype to float_
#		    : - _fromnxfunctions: make sure that list are recognized
#		    : - added notmasked_edges, notmasked_contiguous
#2006-12-09 : - Code reorganization: define 2 modules, core and extras
#2006-11-25 : - Disable copy by default
#             - Added keep_mask flag (to save mask when creating a ma from a ma)